Bug fix
Fixed bug with logout button not showing;

--- a/ProjectFiles/css/style.css
+++ b/ProjectFiles/css/style.css
@@ -159,7 +159,7 @@ a.active-nav {
 }
 
 .logout-nav {
-    visibility: hidden;
+    display: none;
 }
 
 .forms-holder {
